--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,16 @@
         "codesaur/http-application": ">=4.6",
         "codesaur/rbac": ">=1.4.1",
         "codesaur/localization": ">=1.3.1",
-        "codesaur/logger": ">=1.2.4"
+        "codesaur/logger": ">=1.2.4",
+        "codesaur/contents": ">=1.0"
     },
     "autoload": {
         "psr-4": {
             "Indoraptor\\": "src/",
             "Indoraptor\\Account\\": "src/account/",
             "Indoraptor\\Localization\\": "src/localization/",
-            "Indoraptor\\Logger\\": "src/logger/"
+            "Indoraptor\\Logger\\": "src/logger/",
+            "Indoraptor\\Contents\\": "src/contents/"
         }
     },
     "license": "MIT",
