--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
             "Indoraptor\\Account\\": "src/account/",
             "Indoraptor\\Localization\\": "src/localization/",
             "Indoraptor\\Logger\\": "src/logger/",
+            "Indoraptor\\Record\\": "src/record/",
             "Indoraptor\\Contents\\": "src/contents/"
         }
     },
