--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "firebase/php-jwt": ">=5.2.0",
+        "phpmailer/phpmailer": ">=6.5",
         "codesaur/http-application": ">=5.1",
         "codesaur/rbac": ">=1.4.1",
         "codesaur/localization": ">=1.3.1",
@@ -29,7 +30,8 @@
             "Indoraptor\\Localization\\": "src/localization/",
             "Indoraptor\\Logger\\": "src/logger/",
             "Indoraptor\\Record\\": "src/record/",
-            "Indoraptor\\Contents\\": "src/contents/"
+            "Indoraptor\\Contents\\": "src/contents/",
+            "Indoraptor\\Mail\\": "src/mail/"
         }
     },
     "license": "MIT",
