--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     ],
     "require": {
         "firebase/php-jwt": ">=5.2.0",
-        "phpmailer/phpmailer": ">=6.5",
         "codesaur/http-application": ">=5.1",
         "codesaur/rbac": ">=1.4.1",
         "codesaur/localization": ">=1.3.1",
         "codesaur/logger": ">=1.2.5",
-        "codesaur/contents": ">=1.0.1"
+        "codesaur/contents": ">=1.0.1",
+        "codesaur/http-client": ">=1.0"
     },
     "autoload": {
         "psr-4": {
