--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "codesaur/localization": ">=1.5.1",
         "codesaur/logger": ">=1.3.7",
         "codesaur/contents": ">=1.1.7",
-        "codesaur/http-client": ">=1.0.3"
+        "codesaur/http-client": ">=1.0.3",
+        "codesaur/globals": ">=1.2.3"
     },
     "autoload": {
         "psr-4": {
