--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,8 @@
     "require": {
         "firebase/php-jwt": ">=5.2.0",
         "codesaur/http-application": ">=5.2.6",
-        "codesaur/rbac": ">=2.1.8",
-        "codesaur/localization": ">=1.5.2",
+        "codesaur/rbac": ">=2.1.9",
         "codesaur/logger": ">=1.3.7",
-        "codesaur/contents": ">=1.1.9",
         "codesaur/http-client": ">=1.0.3",
         "codesaur/globals": ">=1.2.3"
     },
@@ -31,6 +29,9 @@
             "Indoraptor\\Localization\\": "src/localization/",
             "Indoraptor\\Logger\\": "src/logger/",
             "Indoraptor\\Record\\": "src/record/",
+            "Indoraptor\\File\\": "src/file/",
+            "Indoraptor\\Statement\\": "src/statement/",
+            "Indoraptor\\Contents\\": "src/contents/",
             "Indoraptor\\Mailer\\": "src/mailer/"
         }
     },
