--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,23 @@
 {
     "name": "codesaur/indoraptor",
-    "description": "An elegant object-oriented application development framework for PHP 7.2 or newer",
+    "description": "An elegant object-oriented application for PHP 8.2.1 or newer",
     "keywords": [
-        "indoraptor", "application", "http application", "server request handler", "psr-3", "psr-7", "psr-15",
-        "mongol", "mongolia", "mongolian", "монгол", "codesaur", "narankhuu", "coden", "кодзавр", "наранхүү", "коден",
-        "ololt", "ололт", "мөнхийн", "мөнхийн-ололт", "мөнхийн ололт", "munkhiin ololt"
+        "indoraptor", "application", "http application", "server request handler", "router", "psr-3", "psr-7", "psr-15", "mongol", "mongolia", "mongolian", "монгол", "codesaur", "кодзавр", "narankhuu", "наранхүү", "ololt", "ололт", "мөнхийн ололт", "munkhiin ololt"
     ],
-    "homepage": "https://ololt.mn/codesaur",
+    "homepage": "https://github.com/codesaur-php",
     "authors": [
         {
             "name": "Narankhuu",
-            "email": "codesaur@gmail.com",
-            "homepage": "https://ololt.mn/narankhuu"
+            "email": "codesaur@gmail.com"
         }
     ],
     "require": {
-        "firebase/php-jwt": ">=5.2.0",
-        "codesaur/http-application": ">=5.2.6",
-        "codesaur/rbac": ">=2.1.9",
-        "codesaur/logger": ">=1.3.7",
-        "codesaur/http-client": ">=1.0.3",
-        "codesaur/globals": ">=1.2.3"
+        "firebase/php-jwt": ">=6.3.2",
+        "codesaur/http-application": ">=5.3.4",
+        "codesaur/rbac": ">=2.2.1",
+        "codesaur/logger": ">=1.4.1",
+        "codesaur/http-client": ">=1.1.2",
+        "codesaur/globals": ">=1.3.1"
     },
     "autoload": {
         "psr-4": {
