--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "firebase/php-jwt": ">=6.7.0",
         "codesaur/http-application": ">=5.5.3",
         "codesaur/rbac": ">=2.3.7",
-        "codesaur/logger": ">=1.5.9",
-        "codesaur/http-client": ">=1.3.0"
+        "codesaur/logger": ">=1.5.9"
     },
     "autoload": {
         "psr-4": {
