--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,7 @@
     ],
     "require": {
         "firebase/php-jwt": ">=6.7.0",
-        "codesaur/http-application": ">=5.5.3",
-        "codesaur/rbac": ">=2.5.0",
-        "codesaur/logger": ">=2.0.0"
+        "codesaur/http-application": ">=5.5.3"
     },
     "autoload": {
         "psr-4": {
