--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         }
     ],
     "require": {
+        "ext-json": "*",
         "firebase/php-jwt": ">=6.7.0",
-        "codesaur/http-application": ">=5.5.3"
+        "codesaur/http-application": ">=5.5.3",
+        "codesaur/dataobject": ">=5.0.0"
     },
     "autoload": {
         "psr-4": {
