--- a/.env.example
+++ b/.env.example
@@ -9,12 +9,10 @@ INDO_JWT_LIFETIME=2592000
 INDO_JWT_SECRET="codesaur-indoraptor-not-so-secret"
 #INDO_JWT_LEEWAY=10
 
-INDO_DB_DRIVER=mysql
 INDO_DB_HOST=localhost
 INDO_DB_NAME=codesaur
 INDO_DB_USERNAME=root
-INDO_DB_PASSWORD=
-INDO_DB_ENGINE=InnoDB
+#INDO_DB_PASSWORD=
 INDO_DB_CHARSET=utf8
 INDO_DB_COLLATION=utf8_unicode_ci
 INDO_DB_PERSISTENT=false
