improved logs view

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 CODESAUR_APP_ENV=development
 CODESAUR_APP_NAME=indoraptor
-#CODESAUR_TIME_ZONE=Asia/Ulaanbaatar
-#CODESAUR_OUTPUT_COMPRESS=true
+#CODESAUR_APP_TIME_ZONE=Asia/Ulaanbaatar
 
 INDO_JWT_ALGORITHM=HS256
 INDO_JWT_LIFETIME=2592000
@@ -12,10 +11,9 @@ INDO_DB_HOST=localhost
 INDO_DB_NAME=codesaur
 INDO_DB_USERNAME=root
 #INDO_DB_PASSWORD=
-INDO_DB_CHARSET=utf8
-INDO_DB_COLLATION=utf8_unicode_ci
+INDO_DB_CHARSET=utf8mb4
+INDO_DB_COLLATION=utf8mb4_unicode_ci
 INDO_DB_PERSISTENT=false
-#INDO_TIME_ZONE_UTC="+08:00"
 
 #INDO_MAIL_BREVO_APIKEY=""
 INDO_MAIL_FROM=noreply@codesaur.domain
