--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ INDO_JWT_SECRET="codesaur-indoraptor-not-so-secret"
 INDO_DB_HOST=localhost
 INDO_DB_NAME=codesaur
 INDO_DB_USERNAME=root
-#INDO_DB_PASSWORD=
+INDO_DB_PASSWORD=
 INDO_DB_CHARSET=utf8mb4
 INDO_DB_COLLATION=utf8mb4_unicode_ci
 INDO_DB_PERSISTENT=false
