--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ INDO_JWT_SECRET="codesaur-indoraptor-not-so-secret"
 #INDO_JWT_LEEWAY=10
 
 INDO_DB_HOST=localhost
-INDO_DB_NAME=codesaur
+INDO_DB_NAME=indoraptor
 INDO_DB_USERNAME=root
 INDO_DB_PASSWORD=
 INDO_DB_CHARSET=utf8mb4
