updated JWT mechanics

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,56 @@
-CODESAUR_APP_ENV=development
-CODESAUR_APP_NAME=indoraptor
-#CODESAUR_APP_TIME_ZONE=Asia/Ulaanbaatar
+######################################
+# 🦖 codesaur-ийн Indoraptor Framework
+######################################
 
+# ——— Орчны тохиргоо ба Апп-ын үндсэн мэдээлэл ———
+CODESAUR_APP_ENV=development          # Аппликейшны орчин: development, production гэх мэт
+CODESAUR_APP_NAME=indoraptor          # Аппликейшны нэр
+#CODESAUR_APP_TIME_ZONE=Asia/Ulaanbaatar   # Цагийн бүсийг зааж өгч болно
+
+
+#####################################
+# 🔐 JSON Web Token (JWT) тохиргоо
+#####################################
+# JWT гарын үсгийн алгоритм: HS256, HS512, RS256 гэх мэт
 INDO_JWT_ALGORITHM=HS256
+
+# JWT хүчинтэй хугацаа (секундээр) — 2592000 = 30 хоног
 INDO_JWT_LIFETIME=2592000
-INDO_JWT_SECRET="codesaur-indoraptor-not-so-secret"
+
+# Нууц түлхүүр нь composer ашиглан create-project үед автоматаар үүсдэг.
+# ⚠️ Энэ утгыг Git-д commit хийж болохгүй!
+INDO_JWT_SECRET="auto-generated-during-install"
+
+# Сонголттой тохиргоо: цагийн зөрүүг (clock skew) зөвшөөрөх секунд
 #INDO_JWT_LEEWAY=10
 
-INDO_DB_HOST=localhost
-INDO_DB_NAME=indoraptor
-INDO_DB_USERNAME=root
-INDO_DB_PASSWORD=
-INDO_DB_CHARSET=utf8mb4
-INDO_DB_COLLATION=utf8mb4_unicode_ci
-INDO_DB_PERSISTENT=false
 
+#####################################
+# 🗄️ Өгөгдлийн сангийн тохиргоо
+#####################################
+INDO_DB_HOST=localhost               # Өгөгдлийн сангийн серверийн хаяг
+INDO_DB_NAME=indoraptor              # Өгөгдлийн сангийн нэр
+INDO_DB_USERNAME=root                # Холбогдох хэрэглэгчийн нэр
+INDO_DB_PASSWORD=                    # Нууц үг
+INDO_DB_CHARSET=utf8mb4              # Тэмдэгтийн кодчилол
+INDO_DB_COLLATION=utf8mb4_unicode_ci # Тэмдэгтүүдийн эрэмбэлэлтийн дүрэм
+INDO_DB_PERSISTENT=false             # Тогтвортой холболт ашиглах эсэх (true бол тогтвортой холболт)
+
+
+#####################################
+# 📧 Имэйл / SMTP тохиргоо
+#####################################
+# Brevo (хуучнаар SendInBlue) API түлхүүр
 #INDO_MAIL_BREVO_APIKEY=""
+
+# Илгээх үндсэн имэйл хаяг
 INDO_MAIL_FROM=noreply@codesaur.domain
-#INDO_MAIL_FROM_NAME=
+
+# Илгээхэд ашиглагдах нэр (сонголттой)
+#INDO_MAIL_FROM_NAME="Indoraptor Notification"
+
+# Хариу илгээх имэйл (сонголттой)
 #INDO_MAIL_REPLY_TO=
+
+# Хариу имэйлд харагдах нэр (сонголттой)
 #INDO_MAIL_REPLY_TO_NAME=
