--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,76 @@
-######################################
-# 🦖 codesaur-ийн Indoraptor Framework
-######################################
+#####################################
+# 🦖 codesaur's Indoraptor framework
+#####################################
 
-# ——— Орчны тохиргоо ба Апп-ын үндсэн мэдээлэл ———
-CODESAUR_APP_ENV=development             # Аппликейшны орчин: development, production гэх мэт
-CODESAUR_APP_NAME=indoraptor             # Аппликейшны нэр
-#CODESAUR_APP_TIME_ZONE=Asia/Ulaanbaatar # Цагийн бүсийг зааж өгч болно
+# ——— Environment & App Settings ———
+# Хэрэглэж буй орчны төрөл (development, production)
+CODESAUR_APP_ENV=development
+
+# Аппликейшний нэр
+CODESAUR_APP_NAME=indoraptor
+
+# Цагийн бүс (жишээ: Asia/Ulaanbaatar)
+#CODESAUR_APP_TIME_ZONE=Asia/Ulaanbaatar
 
 
 #####################################
-# 🔐 JSON Web Token (JWT) тохиргоо
+# 🔐 JSON Web Token (JWT)
 #####################################
-# JWT гарын үсгийн алгоритм: HS256, HS512, RS256 гэх мэт
+
+# JWT алгоритм (жишээ: HS256, HS512, RS256)
 INDO_JWT_ALGORITHM=HS256
 
-# JWT хүчинтэй хугацаа (секундээр) — 2592000 = 30 хоног
+# JWT хүчинтэй байх хугацаа (секундээр, 2592000 = 30 хоног)
 INDO_JWT_LIFETIME=2592000
 
-# Нууц түлхүүр нь composer ашиглан create-project үед автоматаар үүсдэг.
-# ⚠️ Энэ утгыг Git-д commit хийж болохгүй!
+# JWT нууц түлхүүр — create-project үед автоматаар generate хийгддэг
 INDO_JWT_SECRET="auto-generated-during-install"
 
-# Сонголттой тохиргоо: цагийн зөрүүг (clock skew) зөвшөөрөх секунд
+# Серверийн цагийн багахан зөрөөг зөвшөөрөх хугацаа (секундээр)
 #INDO_JWT_LEEWAY=10
 
 
 #####################################
-# 🗄️ Өгөгдлийн сангийн тохиргоо
+# 🗄️ Database Configuration
 #####################################
-INDO_DB_HOST=localhost               # Өгөгдлийн сангийн серверийн хаяг
-INDO_DB_NAME=indoraptor              # Өгөгдлийн сангийн нэр
-INDO_DB_USERNAME=root                # Холбогдох хэрэглэгчийн нэр
-INDO_DB_PASSWORD=                    # Нууц үг
-INDO_DB_CHARSET=utf8mb4              # Тэмдэгтийн кодчилол
-INDO_DB_COLLATION=utf8mb4_unicode_ci # Тэмдэгтүүдийн эрэмбэлэлтийн дүрэм
-INDO_DB_PERSISTENT=false             # Тогтвортой холболт ашиглах эсэх (true бол тогтвортой холболт)
+
+# Өгөгдлийн сангийн серверийн хаяг
+INDO_DB_HOST=localhost
+
+# Өгөгдлийн сангийн нэр
+INDO_DB_NAME=indoraptor
+
+# Холбогдох хэрэглэгчийн нэр
+INDO_DB_USERNAME=root
+
+# Холбогдох хэрэглэгчийн нууц үг
+INDO_DB_PASSWORD=
+
+# Өгөгдлийн сангийн charset
+INDO_DB_CHARSET=utf8mb4
+
+# Өгөгдлийн сангийн collation
+INDO_DB_COLLATION=utf8mb4_unicode_ci
+
+# Холболтыг байнгын (persistent) байлгах эсэх
+INDO_DB_PERSISTENT=false
 
 
 #####################################
-# 📧 Имэйл / SMTP тохиргоо
+# 📧 Mail / SMTP Configuration
 #####################################
-# Brevo (хуучнаар SendInBlue) API түлхүүр
+
+# Brevo (SendInBlue) API түлхүүр
 #INDO_MAIL_BREVO_APIKEY=""
 
-# Илгээх үндсэн имэйл хаяг
+# Илгээх и-мэйл хаяг
 INDO_MAIL_FROM=noreply@codesaur.domain
 
-# Илгээхэд ашиглагдах нэр (сонголттой)
+# Илгээх и-мэйл дээр харуулах нэр
 #INDO_MAIL_FROM_NAME="Indoraptor Notification"
 
-# Хариу илгээх имэйл (сонголттой)
+# Хариу авах и-мэйл хаяг
 #INDO_MAIL_REPLY_TO=
 
-# Хариу имэйлд харагдах нэр (сонголттой)
+# Хариу авах нэр
 #INDO_MAIL_REPLY_TO_NAME=
