--- a/.nginx.conf.example
+++ b/.nginx.conf.example
@@ -8,8 +8,8 @@ server {
 }
 
 server {
-  server_name www.example.com;
-  return 301 $scheme://example.com$request_uri;
+    server_name www.example.com;
+    return 301 $scheme://example.com$request_uri;
 }
 
 server {
@@ -18,13 +18,11 @@ server {
 
     server_name example.com;
 
-    ssl on;
     ssl_certificate /etc/nginx/ssl/example.com.crt;
     ssl_certificate_key /etc/nginx/ssl/example.com.key;
 
     root /var/www/html;
-
-    index index.php;    
+    index index.php;
 
     location / {
         try_files $uri $uri/ /index.php?$args;
@@ -37,20 +35,15 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
-
         include fastcgi_params;
-
-        fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
-        
+        fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
         fastcgi_index index.php;
- 
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        try_files $uri =404;
     }
 
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp)$ {
         expires max;
         log_not_found off;
     }
