We are rolling out new major updates for other codesaur packages

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-#####################################
+﻿#####################################
 # 🦖 codesaur's Indoraptor framework
 #####################################
 
-# ——— Environment & App Settings ———
+# --- Environment & App Settings ---
 # Хэрэглэж буй орчны төрөл (development, production)
 CODESAUR_APP_ENV=development
 
@@ -23,8 +23,8 @@ INDO_JWT_ALGORITHM=HS256
 # JWT хүчинтэй байх хугацаа (секундээр, 2592000 = 30 хоног)
 INDO_JWT_LIFETIME=2592000
 
-# JWT нууц түлхүүр — create-project үед автоматаар generate хийгддэг
-INDO_JWT_SECRET="auto-generated-during-install"
+# JWT secret key (auto-generated during composer post-install script)
+INDO_JWT_SECRET=will-be-auto-generated-during-composer-post-install
 
 # Серверийн цагийн багахан зөрөөг зөвшөөрөх хугацаа (секундээр)
 #INDO_JWT_LEEWAY=10
