--- a/.nginx.conf.example
+++ b/.nginx.conf.example
@@ -39,7 +39,10 @@ server {
     # ------------------------------------------------------------------
     # Web root & index
     # ------------------------------------------------------------------
-    root /var/www/html;
+    # ⚠️ ЗАСВАРЛАХ ШААРДЛАГАТАЙ: Indoraptor/public_html директорын 
+    #    бүтэн замыг энд заана уу.
+    #    Жишээ: /var/www/Indoraptor/public_html
+    root /path/to/Indoraptor/public_html;
     index index.php;
 
     # ------------------------------------------------------------------
