--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "codesaur/indoraptor",
     "type": "project",
-    "description": "PHP 8.2+ дээр ажиллах, цэвэр архитектуртай объект хандалттай веб хөгжүүлэлтийн фреймворк",
+    "description": "Цэвэр архитектуртай объект хандалттай веб хөгжүүлэлтийн фреймворк",
     "keywords": [
         "indoraptor", "framework", "фреймворк", "application", "http application", "router", "server request handler", "psr-3", "psr-7", "psr-15", "rbac", "role based access control", "хэрэглэгчийн эрхийн зохицуулалт", "logger", "протокол", "mongol", "mongolia", "монгол", "codesaur", "narankhuu", "coden", "кодзавр", "наранхүү", "коден"
     ],
@@ -14,18 +14,16 @@
         }
     ],
     "require": {
-        "ext-json": "*",
-        "psr/log": ">=3.0.0",
-        "psr/container": "^1.0 || ^2.0",
-        "vlucas/phpdotenv": ">=5.5.0",
-        "phpmailer/phpmailer": ">=6.8.0",
-        "getbrevo/brevo-php": ">=1.0.2",
-        "firebase/php-jwt": ">=6.7.0",
-        "codesaur/http-application": ">=5.8.1",
-        "codesaur/dataobject": ">=7.3.0",
-        "codesaur/http-client": ">=1.6.0",
-        "codesaur/template": ">=2.0.1",
-        "codesaur/container": ">=1.2.1"
+        "psr/log": "^3.0.2",
+        "vlucas/phpdotenv": "^5.6.2",
+        "phpmailer/phpmailer": "^7.0.1",
+        "getbrevo/brevo-php": "^2.0.14",
+        "firebase/php-jwt": "^7.0.2",
+        "codesaur/http-application": "^6.0.0",
+        "codesaur/dataobject": "^8.1.0",
+        "codesaur/http-client": "^2.0.0",
+        "codesaur/template": "^3.0.0",
+        "codesaur/container": "^3.0.0"
     },
     "autoload": {
         "psr-4": {
