Админууд контентыг хялбар удирдах боломжтой болгохын тулд редакторыг бүрэн сайжрууллаа.

--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,10 @@ INDO_MAIL_FROM=noreply@codesaur.domain
 
 # Хариу авах нэр
 #INDO_MAIL_REPLY_TO_NAME=
+
+#####################################
+# 🤖 OpenAI API Configuration
+
+# OpenAI API түлхүүр https://platform.openai.com/api-keys
+# moedit editor-ийн "shine" товчинд ашиглагдана
+#INDO_OPENAI_API_KEY=sk-your-api-key-here
