Админы редакторыг улам сайжрууллаа.

--- a/.env.example
+++ b/.env.example
@@ -73,5 +73,5 @@ INDO_MAIL_FROM=noreply@codesaur.domain
 # 🤖 OpenAI API Configuration
 
 # OpenAI API түлхүүр https://platform.openai.com/api-keys
-# moedit editor-ийн "shine" товчинд ашиглагдана
+# moedit editor-ийн AI товчинд ашиглагдана
 #INDO_OPENAI_API_KEY=sk-your-api-key-here
