moedit - right toolbar

--- a/.env.example
+++ b/.env.example
@@ -75,3 +75,8 @@ INDO_MAIL_FROM=noreply@codesaur.domain
 # OpenAI API түлхүүр https://platform.openai.com/api-keys
 # moedit editor-ийн AI товчинд ашиглагдана
 #INDO_OPENAI_API_KEY=sk-your-api-key-here
+
+#####################################
+# 📷 Content image optimization
+INDO_CONTENT_IMG_MAX_WIDTH=1920
+INDO_CONTENT_IMG_QUALITY=85
