--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
+        "ext-gd": "*",
         "psr/log": "^3.0.2",
         "vlucas/phpdotenv": "^5.6.2",
         "phpmailer/phpmailer": "^7.0.1",
@@ -21,7 +22,7 @@
         "firebase/php-jwt": "^7.0.2",
         "codesaur/http-application": "^6.0.0",
         "codesaur/dataobject": "^9.0.0",
-        "codesaur/http-client": "^2.0.1",
+        "codesaur/http-client": "^2.0.2",
         "codesaur/template": "^3.0.0",
         "codesaur/container": "^3.1.1"
     },
