news module update

--- a/.env.example
+++ b/.env.example
@@ -78,5 +78,7 @@ INDO_MAIL_FROM=noreply@codesaur.domain
 
 #####################################
 # 📷 Content image optimization
+# Зургийн хамгийн их өргөн (px)
 INDO_CONTENT_IMG_MAX_WIDTH=1920
-INDO_CONTENT_IMG_QUALITY=85
+# JPEG/WebP чанар (1-100, 90 нь өнгө хадгалахад сайн)
+INDO_CONTENT_IMG_QUALITY=90
