--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ],
     "require": {
         "ext-gd": "*",
+        "ext-intl": "*",
         "psr/log": "^3.0.2",
         "vlucas/phpdotenv": "^5.6.2",
         "phpmailer/phpmailer": "^7.0.1",
