--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -18,44 +18,38 @@
     #   NC = case-insensitive, 302 = түр чиглүүлэлт
 
     # ---------------------------------------------------------------
-    # 3. URL-ээс www-г зайлуулах
-    # ---------------------------------------------------------------
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ http://%1%{REQUEST_URI} [R=301,QSA,NC,L]
-    # ↑ https://www.domain.com → https://domain.com
-    #   301 = байнгын redirect
-    #   QSA = Query string алдагдуулахгүй
-
-    # ---------------------------------------------------------------
-    # 4. HTTPS албадан ашиглах
+    # 3. HTTPS албадан ашиглах
     # ---------------------------------------------------------------
     RewriteCond %{HTTPS} off
     RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
     # ↑ "https://" биш бол автоматаар HTTPS руу чиглүүлнэ.
 
     # ---------------------------------------------------------------
-    # 5. Server-ийн цагийн бүс тохируулах (шаардлагатай бол)
+    # 4. URL-ээс www-г зайлуулах
     # ---------------------------------------------------------------
-    #SetEnv TZ Asia/Ulaanbaatar
-    # ↑ PHP болон Apache процессын цагийг Asia/Ulaanbaatar болгоно.
+    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+    RewriteRule ^(.*)$ https://%1%{REQUEST_URI} [R=301,QSA,NC,L]
+    # ↑ https://www.domain.com → https://domain.com
+    #   301 = байнгын redirect
+    #   QSA = Query string алдагдуулахгүй
 
     # ---------------------------------------------------------------
-    # 6. Authorization header-г зөв дамжуулах
+    # 5. Authorization header-г зөв дамжуулах
     # ---------------------------------------------------------------
     RewriteCond %{HTTP:Authorization} ^(.*)
-    RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%1]
     # ↑ JWT, Bearer token, Basic Auth гэх мэт Authorization header
     #   Apache-аар дамжихдаа алдагдах асуудлыг засна.
 
     # ---------------------------------------------------------------
-    # 7. Файлыг rewrite хийх - actual файл/директори биш бол
+    # 6. Файлыг rewrite хийх - actual файл/директори биш бол
     # ---------------------------------------------------------------
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     # ↑ Хэрэглэгчийн хүссэн path файл/фолдер биш бол route-руу чиглүүлнэ.
 
     # ---------------------------------------------------------------
-    # 8. Бүх хүсэлтийг index.php руу дамжуулах
+    # 7. Бүх хүсэлтийг index.php руу дамжуулах
     # ---------------------------------------------------------------
     RewriteRule ^(.*)$ index.php/$1 [L]
     # ↑ Indoraptor-ийн routing системийг идэвхжүүлэх үндсэн rewrite.
